# stashapp-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
stashai/: cli.py  services.py
stashai/core/: config.py  database.py  models.py  repository.py
stashai/ml/: features.py  recommender.py
stashai/stash/: client.py  sync.py
stashai/web/: app.py
stashai/web/static/: styles.css
stashai/web/templates/: base.html  dashboard.html  queue.html  scene.html
tests/: conftest.py  test_config.py  test_recommender.py  test_repository.py
