[project]
name = "stashai-recommender"
version = "0.1.0"
description = "Local-first recommendation system for StashApp scenes."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.5.0,<1.6.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
stashai = "stashai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stashai*"]

[tool.setuptools.package-data]
"stashai.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
